# q_aisweb

./: .pre-commit-config.yaml  Dockerfile  README.md  app.py  docker-compose.yml  icao.py  pyproject.toml
templates/: icao_form.html
